# retrieval_eval

./: README.md  download_arkts_ds.py  embedding_model_pretrain.py  pyproject.toml  requirements.txt
evaluation/: cli.py
evaluation/core/: dataset.py  retrieval.py
evaluation/core/metrics/: f1.py  metrics_config.py  mrr.py  ndcg.py  precision.py  ranking_metric.py  recall.py
evaluation/core/utils/: logger.py
evaluation/encoder/: api_encoder.py  auto_encoder.py  clip_encoder.py  encoder.py  encoder_config.py  sentencetransformer_encoder.py
evaluation/encoder/pooling/: cls_pooling.py  mean_pooling.py  pooling_cls.py  pooling_config.py
