[project]
name = "rag_evaluator"
version = "0.1.0"
description = "CLI and evaluation toolkit for retrieval-augmented generation (RAG) systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "beautifulsoup4",
    "pdfplumber",
    "requests",
    "python-dotenv",
    "datasets",
    "numpy",
    "scikit-learn",
    "tabulate",
    "tqdm",
    "torch",
    "transformers",
    "sentence-transformers",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "ruff",                 # 代码检查
    "black",                # 代码格式化
    "isort",                # 导入排序
]

[project.scripts]
evaluator = "evaluation.cli:app" 
